--- a/data_pack/data/ethereal_grove/dialog/config.json
+++ b/data_pack/data/ethereal_grove/dialog/config.json
@@ -7,24 +7,59 @@
     "bold": true,
     "underlined": true
   },
-  "body": [],
+  "pause": true,
+  "body": [
+    {
+      "type": "plain_message",
+      "contents": {
+        "translate": "ethereal_grove.config.options_overview",
+        "underlined": true,
+        "color": "#41d8a1"
+      }
+    },
+    {
+      "type": "plain_message",
+      "contents": {
+        "translate": "ethereal_grove.config.options_overview.description",
+        "color": "#888888"
+      }
+    },
+    {
+      "type": "plain_message",
+      "contents": {
+        "text": "→ ",
+        "extra": [{ "translate": "ethereal_grove.config.greet_on_init" }],
+        "hover_event": {
+          "action": "show_text",
+          "value": {
+            "translate": "ethereal_grove.config.greet_on_init.description"
+          }
+        }
+      }
+    },
+    {
+      "type": "plain_message",
+      "contents": {
+        "translate": "ethereal_grove.config.options_input",
+        "underlined": true,
+        "bold": true,
+        "color": "#41d8a1"
+      }
+    }
+  ],
+
   "inputs": [
     {
       "key": "greet_on_init",
       "type": "minecraft:boolean",
       "label": {
         "translate": "ethereal_grove.config.greet_on_init",
-        "extra": [
-          {
-            "text": "\n",
-            "color": "gray"
-          },
-          {
-            "translate": "ethereal_grove.config.greet_on_init.description",
-            "color": "gray",
-            "italic": true
+        "hover_event": {
+          "action": "show_text",
+          "value": {
+            "translate": "ethereal_grove.config.greet_on_init.description"
           }
-        ]
+        }
       },
       "initial": true,
       "on_true": "true",
@@ -34,10 +69,17 @@
 
   "actions": [
     {
-      "label": "Save ",
+      "label": {
+        "translate": "ethereal_grove.config.save"
+      },
       "action": {
         "type": "dynamic/run_command",
-        "template": "data merge storage ethereal_grove:config {'greet_on_init':\u0024(greet_on_init)}"
+        "template": "data merge storage ethereal_grove:config {'greet_on_init':$(greet_on_init)}"
+      }
+    },
+    {
+      "label": {
+        "translate": "ethereal_grove.config.exit"
       }
     }
   ]
